# fsscore

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  env.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
data/: evaluate_scores.ipynb  helper_funs.py  preprocessing.ipynb  remove_cycle_edges_by_MFAS_greedy.py  remove_self_loops.py  s_c_c.py
data_processing/: chempapers_processing.py  combine_datasets.py  process_data.sh  remove_cycle_edges_by_dfs.py  uspto_processing.py
docs/: conf.py  index.rst
models/: pretrain_graph_GGLGGL_ep242_best_valloss.ckpt
scscore/models/full_reaxys_model_2048bool/: model.ckpt-10654.as_numpy.pickle
scscore/scscore/: nntrain_fingerprint.py  nntrain_fingerprint_tf2.py  standalone_model_numpy.py  standalone_model_tf.py
src/fsscore/: __init__.py  finetuning.py  pair_molecules.py  score.py  test.py  train.py
src/fsscore/data/: dataloader.py  datamodule.py  featurizer.py  graph_dataset.py  molgraph.py
src/fsscore/models/: gnn.py  nn_utils.py  ranknet.py
src/fsscore/utils/: clustering_mols.py  earlyreloading.py  earlystop_ft.py  paths.py
src/intuitive_sc/: __init__.py  finetuning.py  score.py  skeleton.py  test.py  train.py
src/intuitive_sc/data/: dataloader.py  datamodule.py  featurizer.py  graph_dataset.py  molgraph.py
src/intuitive_sc/models/: gnn.py  gnn_readouts.py  nn_utils.py  ranknet.py
src/intuitive_sc/utils/: clustering_mols.py  conversions.py  earlyreloading.py  earlystop_ft.py  logging.py  logging_utils.py  paths.py
streamlit_app/: run.py  utils.py
streamlit_app/data/models/: fine_tuned_model.pt
streamlit_app/data/scoring/: molecules_test2.csv
streamlit_app/data/unlabeled/: molecules.csv  molecules_test.csv  protacdb_k8_GGLGGL_diff_mc100_sorted.csv
tests/: conftest.py  gnn_readouts.test.py  molgraph.test.py  nn_utils.test.py  ranknet.test.py  score.test.py  test_featurizer.py  test_gnn_readouts.py  test_import.py  test_ranknet.py  test_score.py  test_skeleton.py
